--- a/src/sass/adaptation_scss/adaptation_develop_2.scss
+++ b/src/sass/adaptation_scss/adaptation_develop_2.scss
@@ -97,7 +97,7 @@
                 }
                 .con2{ font-size: 26px;max-width: calc(100% - 125px);}
                 .con3{
-                    a{font-size: 28px; line-height: 50px; }
+                    a.button-green{font-size: 28px; line-height: 50px; }
                 }
             }
         }
