--- a/src/sass/develop_scss/develop_1.scss
+++ b/src/sass/develop_scss/develop_1.scss
@@ -36,10 +36,10 @@
         .form_row{margin-bottom: 20px;
             .form_input{position: relative;
                 input{height: 50px;background-color: #fff;border:1px solid #c5c5c5;border-radius: 3px;text-align: center;line-height: 50px;padding: 0 5px;width: 100%;
-                    &::-webkit-input-placeholder {color:#a0a0a0;font-family: Arial, sans-serif;}
-                    &:-moz-placeholder {color:#a0a0a0;font-family: Arial, sans-serif;}
-                    &::-moz-placeholder {color:#a0a0a0;font-family: Arial, sans-serif;}
-                    &:-ms-input-placeholder {color:#a0a0a0;font-family: Arial, sans-serif;}
+                    &::-webkit-input-placeholder {color:#a0a0a0;font-family: 'Asap',sans-serif;}
+                    &:-moz-placeholder {color:#a0a0a0;font-family: 'Asap',sans-serif;}
+                    &::-moz-placeholder {color:#a0a0a0;font-family: 'Asap',sans-serif;}
+                    &:-ms-input-placeholder {color:#a0a0a0;font-family: 'Asap',sans-serif;}
                 }
                 .errorText{position: absolute;left: calc(100% + 10px);width: 200px;top: 50%;transform:translate(0, -50%);font-size: 12px;color:#424242;}
             }
@@ -57,7 +57,7 @@
                     &:after{width: 0;}
                 }
             }
-        }        
+        }
     }
     .form-socials{padding-bottom: 20px;padding-top: 35px;
         .form-socials-text{font-size: 12px;color:#336699;text-align: center;margin-bottom: 15px;padding: 0 5px;}
