buttons hovers in registrtation & login

--- a/src/sass/develop_scss/develop_1.scss
+++ b/src/sass/develop_scss/develop_1.scss
@@ -46,9 +46,7 @@
         }
         .submit-wrap{margin-bottom: 20px;}
         .register-link-wrap{margin-bottom: 15px;}
-        .button-green, .button-blue{width: 100%;max-width: none;height: 50px;line-height: 50px;text-decoration: none;border:none;font-size: 16px;font-weight: 700;text-transform: uppercase;cursor:pointer;
-            &:hover{background:orange;}
-        }
+        .button-green, .button-blue{width: 100%;max-width: none;height: 50px;line-height: 50px;text-decoration: none;border:none;font-size: 16px;font-weight: 700;text-transform: uppercase;cursor:pointer;}
 
         .form-links{text-align: center;font-size: 12px;padding-bottom: 20px;
             a{color:#424242;position: relative;text-decoration: none;
