--- a/src/sass/adaptation_scss/adaptation_develop_4.scss
+++ b/src/sass/adaptation_scss/adaptation_develop_4.scss
@@ -142,7 +142,7 @@
     /*casino-item*/
     .casino-item{
         .content{}
-        .item-img-wrap{width: 100%;
+        .item-img-wrap{width: 100%;text-align: center;margin-right: 0;
             .item-img{margin-bottom: 0;
                 img{position: static;transform: translateX(0);}
             }
@@ -151,7 +151,7 @@
             }
         }
         .texter{width: 100%;padding-left: 0;
-            h5{}
+            h5{text-align: center;}
             p{
                 img{}
             }
