--- a/src/sass/develop_scss/develop_4.scss
+++ b/src/sass/develop_scss/develop_4.scss
@@ -89,8 +89,10 @@ header{position: relative;z-index: 15;
 
 /*casino-item*/
 .casino-item{
-    .content{padding: 20px;display: flex;justify-content: space-between;flex-wrap: wrap;align-content:stretch;}
-    .item-img-wrap{width: 28%;
+    .content{padding: 20px;
+        &:after{content:'';display: block;width: 100%;height: 0;clear: both;}
+    }
+    .item-img-wrap{width: 28%;float: left;margin-right: 15px;
         .item-img{margin-bottom: 10px;
             img{position: relative;left: 50%;transform: translateX(-50%);}
         }
@@ -98,7 +100,7 @@ header{position: relative;z-index: 15;
             .button-green{line-height: 45px;text-decoration: none;font-size: 16px;}
         }
     }
-    .texter{width: 72%;padding-left: 18px;
+    .texter{
         h5{font-size: 18px;color: #424242;font-weight: bold;line-height: 1.2;padding-bottom: 14px;padding-top: 14px;}
         p{font-size: 14px;color: #6b6b6b;line-height: 22px;
             img{margin-right: 5px;margin-bottom: -2px;}
