--- a/src/partials/hidden-block.html
+++ b/src/partials/hidden-block.html
@@ -40,4 +40,19 @@
         </form>
     </div>
 
+    <div id="leave-fancy" class="leave-fancy">
+        <div class="leave-title">
+            <p>You leave site area.</p>
+            <p>Do you want leave site?</p>
+        </div>
+        <div class="leave-buttons">
+            <div class="leave-button button-green">
+                <span>No</span>
+            </div>
+            <div class="leave-button button-blue">
+                <span>Yes</span>
+            </div>
+        </div>
+    </div>
+
 </div>
