--- a/src/sass/develop_scss/develop_1.scss
+++ b/src/sass/develop_scss/develop_1.scss
@@ -167,9 +167,7 @@
                 .descript-title{color:#797979;}
             }
             .list-links{width: 100%;display: flex;justify-content:center;padding-top: 15px;border-top:1px solid #dadada;
-                .button-green, .button-blue{max-width: 150px;width: 100%;margin:0 5px;height: 35px;line-height: 35px;font-size: 14px;font-weight: 700;color:#fff;text-decoration: none;cursor: pointer;
-                    &:hover{background:orange;}
-                }
+                .button-green, .button-blue{max-width: 150px;width: 100%;margin:0 5px;height: 35px;line-height: 35px;font-size: 14px;font-weight: 700;color:#fff;text-decoration: none;cursor: pointer;}
             }
         }
 
