fancy close window

--- a/src/sass/adaptation_scss/adaptation_develop_1.scss
+++ b/src/sass/adaptation_scss/adaptation_develop_1.scss
@@ -301,6 +301,22 @@
 
     /* /statistic */
 
+    /* fancybox-close-window */
+
+        .leave-fancy{width: 100%;
+            .leave-buttons{
+                .button-green{margin-right: 10px;}
+            }
+        }
+
+    /* /fancybox-close-window */
+
+    /* fancybox success rating */
+
+        .success-rating{width: 100%;}
+
+    /* /fancybox success rating */
+
 }
 @media screen and (max-width: 320px){
 
