--- a/src/sass/develop_scss/develop_1.scss
+++ b/src/sass/develop_scss/develop_1.scss
@@ -185,3 +185,14 @@
     }
 
 /* /fancybox-close-window */
+
+/* fancybox success rating */
+
+    .success-rating{padding: 20px 10px;width: 425px;
+        .success-rating-text{text-align: center;font-size: 20px;line-height: 24px;margin-bottom: 20px;}
+        .success-rating-button{text-align: center;
+            .button-green{max-width: 120px;width: 100%;margin:0 auto;cursor: pointer;}
+        }
+    }
+
+/* /fancybox success rating */
