--- a/src/sass/adaptation_scss/adaptation_develop_4.scss
+++ b/src/sass/adaptation_scss/adaptation_develop_4.scss
@@ -4,8 +4,8 @@
 @media screen and (max-width: 1600px){
 
 }
-@media screen and (max-width: 1366px){
-
+@media screen and (max-width: 1405px){
+    .main-baner .sub-item:first-child img{top: 50%;}
 }
 @media screen and (max-width: 1280px){
 
