--- a/src/sass/develop_scss/develop_4.scss
+++ b/src/sass/develop_scss/develop_4.scss
@@ -68,10 +68,12 @@ header{position: relative;z-index: 15;
     .main-baner-wrapper{height: 100%;border:3px solid #8f8f8f;}
     .item{width: 37%;float: left;height: 100%;position: relative;overflow: hidden;
         &.big{width: 63%;border-right: 3px solid #8f8f8f;}
-        img{position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);max-width: none;}
+        img{position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);max-width: none;min-height: 100%;min-width: 100%;}
     }
     .sub-item{width: 100%;height: 50%;position: relative;overflow: hidden;
-        &:first-child{border-bottom: 3px solid #8f8f8f;}
+        &:first-child{border-bottom: 3px solid #8f8f8f;
+            img{top: 48%;max-height: 107%;}
+        }
         img{max-width: 105%;}
     }
     .flag{position: absolute;width: 67px;min-height: 65px;background-color: #a5d000;color: white;text-transform: uppercase;text-align: center;top: 0;left: 4%;z-index: 15;
