--- a/src/sass/develop_scss/develop_4.scss
+++ b/src/sass/develop_scss/develop_4.scss
@@ -3,7 +3,7 @@ header{position: relative;z-index: 15;
     .top-head{min-height: 175px;display: flex;align-items: center;justify-content: space-between;flex-wrap: wrap;align-content:center;}
     .logo{position: relative;
         .logo-mobile{display: none;}
-        .logo-flag{position: absolute;bottom:14px;right: 0;height: 20px;width: 24px;overflow: hidden;}
+        .logo-flag{position: absolute;bottom:14px;right: -5px;height: 20px;width: 32px;overflow: hidden;}
     }
     .bottom-head{display: flex;align-items: center;justify-content: space-between;flex-wrap: wrap;background-color: #fff;border:2px solid #dddddd;
         .mobile-button{display: none;}
