--- a/src/sass/develop_scss/develop_2.scss
+++ b/src/sass/develop_scss/develop_2.scss
@@ -54,10 +54,10 @@
             &:before{content:'';display: block;position: absolute;width: 78px;height: 78px;background-image:url(../images/ring.gif);opacity: 0;pointer-events:none;top:calc(50% - 39px);left:calc(50% - 39px);opacity: 0;transition:opacity 300ms ease;}
             .item-list{transition:opacity 300ms ease 300ms;opacity: 1;
                 .item{border-bottom: 2px solid #dddddd; display: table; min-height: 200px;max-width: 580px;width: 100%;
-                    .left-it{padding: 20px 10px; display: table-cell; vertical-align: middle; min-width: 180px;
+                    .left-it{padding: 20px 10px; display: table-cell; vertical-align: middle; min-width: 180px;width: 32%;
                         img{width: 160px; height: 160px;}
                     }
-                    .right-it{ padding: 20px 10px; display: table-cell; vertical-align: bottom;
+                    .right-it{ padding: 20px 10px; display: table-cell; vertical-align: bottom;    width: 68%;
                         .conteiner-buton{ padding-top: 20px;
                             a{text-decoration: none;}
                         }
@@ -152,7 +152,7 @@
 
 /* flag styles */
 
-    .flag-wrap{display:inline-block;position:relative;vertical-align: middle;
+    .flag-wrap{display:inline-block;position:relative;vertical-align: middle;max-height: 20px;max-width: 32px;overflow: hidden;
         &:before, &:after{content:"";display: block;position: absolute;left:calc(50% - 2px);top:calc(50% - 13px);width: 3px;height: 26px;background-color: tomato;opacity:0;transform-origin:50% 50%;border-radius: 3px;}
         &:before{transform:rotate(45deg);}
         &:after{transform:rotate(-45deg);}
