--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -5,7 +5,7 @@
     <title></title>
 
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-
+    <meta name="format-detection" content="telephone=no">
     <link href='https://fonts.googleapis.com/css?family=Asap:400,400italic,700,700italic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" href="css/style.css">
