--- a/src/sass/develop_scss/develop_2.scss
+++ b/src/sass/develop_scss/develop_2.scss
@@ -89,8 +89,8 @@
                             .con2{text-decoration: underline;}
                         }
                     }
-                    .con1{ max-width: 85px;width: 100%; }
-                    .con2{ font-size: 13px;max-width: calc(100% - 90px);width: 100%;}
+                    .con1{ max-width: 85px;/*width: 100%;*/ }
+                    .con2{ font-size: 13px;width: calc(100% - 90px);/*width: 100%;*/}
                     .con3{ padding: 0 0 0 7px;width: 25%;
                         a{text-decoration: none;
                             &.button-green{width: 100%;justify-content:center;font-size: 12px;line-height: 22px;min-width: 0;}
@@ -152,13 +152,14 @@
 
 /* flag styles */
 
-    .flag-wrap{display:inline-block;position:relative;vertical-align: middle;max-height: 20px;max-width: 32px;overflow: hidden;
-        &:before, &:after{content:"";display: block;position: absolute;left:calc(50% - 2px);top:calc(50% - 13px);width: 3px;height: 26px;background-color: tomato;opacity:0;transform-origin:50% 50%;border-radius: 3px;}
+    .flag-wrap{display:inline-block;position:relative;vertical-align: middle;height: 20px;width: 32px;overflow: hidden;
+        &:before, &:after{content:"";display: block;position: absolute;left:calc(50% - 2px);top:calc(50% - 13px);width: 3px;height: 26px;background-color: tomato;opacity:0;transform-origin:50% 50%;border-radius: 3px;z-index: 2;}
         &:before{transform:rotate(45deg);}
         &:after{transform:rotate(-45deg);}
         &.not-accepted{
             &:before, &:after{opacity: 1;}
         }
+        img{position: absolute;top: 50%;left: 50%;transform: translate(-50%,-50%);z-index: 1;max-width: none;}
     }
 
 /* /flag styles */
