--- a/src/sass/style_basic.scss
+++ b/src/sass/style_basic.scss
@@ -12,6 +12,7 @@
 /* /helping adds*/
 
 /* base styles*/
+*{-webkit-appearance: none;}
 *,*:before, *:after{box-sizing:border-box;outline:none;}
 html{height:100%;}
 body{min-height:100%;width:100%;min-width:320px;font-family:'Asap',sans-serif;background:#f7f7f7;color:#656565;position:relative;font-size: 14px;line-height: 1;}
